# ops-transformer

./: CHANGELOG.md  CMakeLists.txt  README.md  build.sh  classify_rule.yaml
attention/attention_worker_combine/: README.md
attention/bsa_select_block_mask/: README.md
attention/flash_attention_score/: README.md
attention/fused_infer_attention_score/: README.md
attention/incre_flash_attention/: README.md
attention/kv_quant_sparse_flash_attention/: README.md
attention/lightning_indexer/: README.md
attention/lightning_indexer_v2/: README.md
attention/mixed_quant_sparse_flash_mla/: README.md
attention/mla_prolog_v3/: README.md
attention/quant_lightning_indexer/: README.md
attention/sparse_flash_attention/: README.md
attention/sparse_flash_mla/: README.md
attention/sparse_flash_mla_grad/: README.md
attention/sparse_lightning_indexer_grad_kl_loss/: README.md
attention/sparse_lightning_indexer_kl_loss_grad/: README.md
cmake/: custom_build.cmake  func.cmake  obj_func.cmake  opbuild.cmake  symbol.cmake  variables.cmake
cmake/modules/: FindOPBASE.cmake
common/: CMakeLists.txt
docs/: README.md
docs/zh/: ascend950_op_list.md  menu_aclnn_api.md  op_api_list.md  op_list.md  (+1 more)
experimental/ffn/matmul_swiglu/tests/: CMakeLists.txt  assets_golden.py
experimental/ffn/matmul_swiglu/tests/ut/op_host/: CMakeLists.txt  test_matmul_swiglu_infershape.cpp
experimental/ffn/matmul_swiglu/tests/ut/op_kernel/: CMakeLists.txt  test_matmul_swiglu_kernel_golden.cpp  test_matmul_swiglu_kernel_run.cpp
tests/: test_config.yaml
torch_extension/: README.md
(+2165 files in other folders)
